fix page transition z-index

--- a/src/app/core/main/main.component.scss
+++ b/src/app/core/main/main.component.scss
@@ -24,12 +24,11 @@
 }
 
 .header {
-  z-index: 1;
   grid-area: header;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .sidebar {
@@ -75,7 +74,6 @@
   }
 
   .sidebar {
-    position: unset;
-    z-index: unset;
+    position: static;
   }
 }
